--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -9,7 +9,7 @@
   timezone: UTC+8
   date: 11.19, 2019
   place: 莱达四维，深圳
-  sub: other
+  sub: OT
   note: '<b>备注</b>: 完成属于自己的AI-Deadline <a href=''https://github.com/little-carrrot-errr/ai-deadlines''>fork地址</a>.'
 
 
@@ -22,7 +22,7 @@
   timezone: UTC+8
   date: June 8-12, 2020
   place: Santiago de Compostella, Spain
-  sub: other
+  sub: OT
   note: '<b>NOTE</b>: Mandatory abstract deadline on Nov 15, 2019. More info <a href=''http://ecai2020.eu/call-for-papers/mainconference/''>here</a>.'
 
 
