--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: 小萝卜的工作Deadlines # (Maintained by @abhshkdz)
 # email: abhshkdz@vt.edu
-description: 给自己的学习和工作目标规划好deadline
-author: 小萝卜
+description: 给自己的学习和工作目标规划好deadline~
+author: Abhishek Das
 
 domain: "aideadlin.es"
 baseurl: ""
 
-twitter_username: abhshkdz/原作者
+twitter_username: abhshkdz
 twitter_hashtag: machinelearning
 github_username: abhshkdz
 github_repo: ai-deadlines
